<resources>

    <string name="app_name">Nourriture</string>
    <string name="food">食物</string>
    <string name="recipe">菜谱</string>
    <string name="ok">确认</string>
    <string name="loading">正在加载中...</string>
    <string name="cmt">评论</string>
    <string name="qr_code">二维码</string>
    <string name="pull_up_load">上拉加载...</string>
    <string name="loosen_load_more">松开加载更多...</string>
    <string name="pull_down_refresh">下拉刷新...</string>
    <string name="refreshing">正在刷新...</string>
    <string name="loosen_refreshing">松开刷新...</string>
    <string name="no_more">没有更多了</string>
    <string name="exit_app">退出程序</string>
    <string name="cancel">取消</string>
    <string name="customer">普通用户</string>
    <string name="manu">厂商</string>
    <string name="add">添加</string>
    <string name="numres">个搜索结果</string>
    
    <string name="search_edit_hint">搜索食物或食谱</string>

    <!-- 菜单 -->
    <string name="menu_exit">退出</string>

	<!-- 商品分类 -->
	<string name="category">全部分类</string>
	<!-- 二维码 -->
	<string name="scan_tip">请将二维码置于取景框内扫描</string>
	<string name="scan_retry">二维码扫描出错啦,请重新扫描</string>
    <string name="scan_title">扫一扫</string>
    <!-- 个人中心 -->
    <string name="personal_title">我的nourriture</string>
    <string name="personal_more">更多</string>
    <string name="personal_welcome">欢迎来到nourriture</string>
    <string name="personal_login">登录</string>
    <string name="personal_language">语言</string>
    <string name="personal_account">密码</string>
    <string name="personal_setting_center">设置</string>
    <string name="personal_account_center">账户</string>
    <string name="personal_edit_info">其他信息</string>
    <string name="personal_quit">退出登录</string>

	<!-- 登陆界面 -->
    <string name="login">登录</string>
    <string name="loginacount">账号名：</string>
    <string name="loginpassword">密   码：</string>
    <string name="inputpassword">请输入密码</string>
    <string name="inputaccount">请输入账号</string>
    <string name="register">快速注册</string>
    <string name="search_info">暂无收索历史</string>
    <string name="login_btn">登   录</string>
    <string name="registerfree">免费注册</string>
   
	<!--   更多 -->
	<string name="more">更多</string>
	
	<!-- 注册 -->
	<string name="register_in_normal">普通用户注册</string>
	<string name="register_in_manu">厂商注册</string>
	<string name="register_normal_useraccount">用户名：</string>
	<string name="register_normal_useraccount_hint">请输入你的用户名</string>
	<string name="register_normal_password">密码：</string>
	<string name="register_normal_password_hint">请输入密码</string>
	<string name="register_normal_repassword">确认密码：</string>
	<string name="register_normal_repassword_hint">请输入确认密码</string>
	<string name="boy">男</string>
	<string name="girl">女</string>
	<string name="register_normal_age_hint">请输入年龄</string>
	<string name="register_manu_useraccount_hint">请输入你的用户名</string>
	<string name="register_manu_password_hint">请输入密码</string>
	<string name="register_manu_repassword_hint">请确认密码</string>
	<string name="register_manu_company_name_hint">请输入公司名</string>
	<string name="register_manu_company_description_hint">请输入公司简介</string>
	
    <string name="input_old_password">输入原密码</string>
    <string name="input_new_password">输入新密码</string>
    <string name="confirm_old_password">确认新密码</string>
    
    <!-- ChangePwdActivity -->
    <string name="activity_change_pwd_title">修改密码</string>
    <string name="activity_change_pwd_input_old_pwd">请输入原始密码</string>
    <string name="activity_change_pwd_input_new_pwd">请输入新密码</string>
    <string name="activity_change_pwd_confirm_pwd">请再次输入密码</string>
    <string name="activity_change_pwd_not_same">两次输入的密码不一致,请重新输入</string>
    <string name="activity_change_pwd_fail">密码修改失败</string>
    <string name="activity_change_pwd_success">密码修改成功</string>
    
    <!-- CmtActivity -->
    <string name="activity_cmt_title">评论</string>
    <string name="activity_cmt_input_cmt">请输入评论</string>
    
    <!-- EditBormalInfoActivity -->
    <string name="activity_edit_bormal_info_title">修改其他信息</string>
    <string name="activity_edit_bormal_info_input_age">请输入年龄!</string>
    <string name="activity_edit_bormal_info_fail">修改失败</string>
    <string name="activity_edit_bormal_info_success">修改成功</string>
    
    <!-- EditManuInfoActivity -->
    <string name="activity_edit_manu_info_title">修改其他信息</string>
    <string name="activity_edit_manu_info_input_company_name">请输入公司名称!</string>
    <string name="activity_edit_manu_info_input_company_des">请输入公司简介!</string>
    <string name="activity_edit_manu_info_fail">修改失败</string>
    <string name="activity_edit_manu_info_success">修改成功</string>
    
    <!-- FoodActivity -->
    <string name="activity_food_name">食物名：</string>
    <string name="activity_food_price">价格：</string>
    <string name="activity_food_category">种类：</string>
    <string name="activity_food_flavour">口味：</string>
    <string name="activity_food_produce_location">生产地：</string>
    <string name="activity_food_buy_location">销售地：</string>
    
    <!-- HomeActivity -->
    <string name="activity_home_is_exit_app">确定退出Nourriture？</string>
    
    <!-- IndexActivity -->
    <string name="activity_index_rmd_food">推荐食物</string>
    <string name="activity_index_rmd_recipe">推荐菜谱</string>
    
    <!-- LoginActivity -->
    <string name="activity_login_name_no_empty">用户名不能为空</string>
    <string name="activity_login_pwd_no_empty">密码不能为空!</string>
    <string name="activity_login_choose_identity">请选择登陆身份</string>
    <string name="activity_login_fail">登陆失败</string>
    <string name="activity_login_success">登陆成功</string>
    
    <!-- RecipeActivity -->
    <string name="activity_recipe_ing">原料：</string>
    
    <!-- RegisterActivity -->
    <string name="activity_register_customer">普通用户注册</string>
    <string name="activity_register_manu">厂商注册</string>
    
    <!-- RegisterBormalActivity -->
    <string name="activity_register_bornal_name_no_empty">用户名不能为空</string>
    <string name="activity_register_bornal_pwd_no_empty">密码不能为空</string>
    <string name="activity_register_bornal_cfm_pwd_no_empty">确认密码不能为空</string>
    <string name="activity_register_bornal_age_no_empty">年龄不能为空</string>
    <string name="activity_register_bornal_pwd_not_same">两次密码不一致,请重新输入</string>
    <string name="activity_register_bornal_fail">注册失败</string>
    <string name="activity_register_bornal_success">注册成功</string>
    <string name="activity_register_btn">注册</string>
    
    <!-- RegisterManuActivity -->
    <string name="activity_register_manu_name_no_empty">用户名不能为空</string>
    <string name="activity_register_manu_pwd_no_empty">密码不能为空</string>
    <string name="activity_register_manu_cfm_pwd_no_empty">确认密码不能为空</string>
    <string name="activity_register_manu_pwd_not_same">两次密码不一致,请重新输入</string>
    <string name="activity_register_manu_company_name_no_empty">公司名不能为空</string>
    <string name="activity_register_manu_company_des_no_empty">公司描述不能为空</string>
    
    <!-- Rmd Activity -->
    <string name="activity_rmd_list_no_login">您还没有登陆</string>
    <string name="activity_rmd_list_manu_not_support">厂商暂时不支持推荐</string>
    <string name="activity_rmd_list_user_info_part">用户信息不完整，暂时没有推荐</string>
    
    <!-- SearchActivity -->
    <string name="activity_search_no_keyword">关键字不能为空</string>
    <string name="activity_search_fail">搜索失败:</string>
    <string name="activity_search_clear">清空历史记录</string>
    <string name="activity_search_rs">搜索结果</string>
    
    <!-- SetLangActivity -->
    <string name="activity_set_lang_title">修改语言</string>
    <string name="activity_set_lang_sys">跟随系统</string>
    
    <!-- ExitView -->
    <string name="exit_view_hint">退出后不会删除任何历史数据，下次\n登录依然可以使用本帐号</string>
    <string name="exit_view_logout">退出登录</string>
    <string name="exit_view_cancel">取消</string>
    
    <!-- CmtActivity -->
    <string name="activity_cmt_no_cmt">暂时还没有评论哦</string>
    <string name="activity_no_login">你还没有登录</string>
    <string name="activity_manu_not_support">暂不支持厂商评论</string>
    <string name="activity_manu_cmt_not_empty">评论不能为空</string>
    <string name="activity_cmt_fail">评论失败</string>
    
    <!-- AddFoodActivity -->
    <string name="activity_add_food_title">添加食物</string>
    <string name="activity_add_food_locate">点击定位</string>
    <string name="activity_add_food_sel_flavour">点击选择口味</string>
    <string name="activity_add_food_sel_category">点击选择类别</string>
    <string name="activity_add_food_from_album">从相册选择</string>
    <string name="activity_add_food_take_photo">拍照</string>
    <string name="activity_add_food_no_image">图片不能为空</string>
    <string name="activity_add_food_no_name">食物名不能为空</string>
    <string name="activity_add_food_no_price">食物价格不能为空</string>
    <string name="activity_add_food_no_flavour">请为食物选择一种口味</string>
    <string name="activity_add_food_no_category">请为食物选择一种类别</string>
    <string name="activity_add_food_no_produce_loc">请为食物选择生产地</string>
    <string name="activity_add_food_no_buy_loc">请为食物选择销售地</string>
    
    <!-- SelFlavourActivity -->
    <string name="activity_sel_flavour_title">选择口味</string>
    
    <!-- SelFoodCategoryActivity -->
    <string name="activity_sel_food_category_title">选择食物类别</string>
    
    <!-- SelRecipeCategoryActivity -->
    <string name="activity_sel_recipe_category_title">选择食谱类别</string>
    
    <!-- SelRegionActivity -->
    <string name="activity_sel_region_title">选择地区</string>
    
    <!-- SearchLocationActivity -->
    <string name="activity_search_location_title">输入详细地址</string>
    <string name="activity_search_location_locate">定位当前位置</string>
    <string name="activity_search_location_click">直接点击地图地位</string>
    <string name="activity_search_location_keyword">关键词不能为空</string>
    <string name="activity_search_location_no_result">没有找到结果，请尝试其他关键字</string>
    <string name="activity_search_location_other_city">在当前区域中未找到结果，但您可以尝试：</string>
    
    <!-- ConfirmLocationActivity -->
    <string name="activity_confirm_location_title">确认位置</string>
</resources>
