<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:orientation="horizontal" >
    
    <ImageView 
        android:id="@+id/imageview_icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/pai_defult_img"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:id="@+id/textview_name" 
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textStyle="bold"
            android:textSize="17sp"
            android:gravity="center_vertical"/>
        <LinearLayout
             android:layout_width="fill_parent"
	         android:layout_height="40dp"
	         android:orientation="horizontal" >
             <TextView 
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:gravity="center_vertical"
                 android:text="@string/activity_food_price"/>
             <TextView
                 android:id="@+id/textview_price" 
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:gravity="center_vertical"
                 android:text="14.09"/>
             <TextView 
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:gravity="center_vertical"
                 android:text="@string/activity_food_flavour"
                 android:layout_marginLeft="10dp"/>
             <TextView
                 android:id="@+id/textview_flavour" 
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:gravity="center_vertical"
                 android:text="@string/loading"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
