<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f0f0f0"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/id_title"
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:background="@drawable/android_title_bg" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dip"
            android:text="修改其他信息"
            android:textColor="#ffffff"
            android:textSize="15.0dip" />
    </LinearLayout>

   <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">
        
        <RadioGroup
            android:id="@+id/rdg_sex"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">
            <RadioButton 
                android:id="@+id/rb_boy"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/boy"
                android:layout_marginRight="10dp"/>
            <RadioButton 
                android:id="@+id/rb_girl"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/girl"
                android:layout_marginLeft="10dp"/>
        </RadioGroup>
        
        <EditText 
            android:id="@+id/ed_age"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:hint="@string/register_normal_age_hint"
            android:background="@drawable/category_selection_gridview_bg"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>
        
    </LinearLayout>
   
            
    <Button
        android:id="@+id/login"
        android:onClick="confirmUpdate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/btn_style_alert_dialog_special"
        android:gravity="center"
        android:text="确认"
        android:textSize="16sp"
        android:textColor="#fff" />
            
</LinearLayout>