<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f0f0f0"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/id_title"
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:background="@drawable/android_title_bg" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dip"
            android:text="修改密码"
            android:textColor="#ffffff"
            android:textSize="15.0dip" />
    </LinearLayout>

   <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">
       
       <EditText 
           android:id="@+id/ed_old_pwd"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:hint="@string/input_old_password"
            android:background="@drawable/category_selection_gridview_bg"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:inputType="textPassword" />
       
       <EditText 
           android:id="@+id/ed_new_pwd"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:hint="@string/input_new_password"
            android:background="@drawable/category_selection_gridview_bg"
            android:inputType="textPassword"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>
       
        <EditText 
            android:id="@+id/ed_repwd"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:hint="@string/confirm_old_password"
            android:background="@drawable/category_selection_gridview_bg"
            android:inputType="textPassword"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>
        
    </LinearLayout>
   
            
    <Button
        android:id="@+id/login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/btn_style_alert_dialog_special"
        android:gravity="center"
        android:text="确认"
        android:onClick="changePwd"
        android:textSize="16sp"
        android:textColor="#fff" />
            
</LinearLayout>