<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" 
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/search_top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/android_title_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        
        <cn.edu.bjtu.nourriture.widgets.AutoClearEditText
            android:id="@+id/search_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/search_box"
            android:drawableRight="@drawable/app_icon_voice"
            android:focusable="true"
            android:hint="@string/search_edit_hint"
            android:padding="6dp"
            android:singleLine="true"
            android:textColor="@color/darkgray"
            android:textSize="@dimen/micro_text_size" />

        <ImageButton
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/app_home_title_r_button_selector"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/android_search_icon" />
    </LinearLayout>
    <ListView
        android:id="@+id/search_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="0dp"
        android:listSelector="@null"
        android:scrollbars="none"
        android:visibility="gone"/>
    <View
        android:id="@+id/line1" 
        style="@style/SearchLine"
        android:visibility="gone"/>
    <RelativeLayout
        android:id="@+id/relativelayout_option_op" 
	    android:layout_width="match_parent"
	    android:layout_height="50dp"
	    android:padding="10dp"
	    android:background="@drawable/bg_search_list"
	    android:visibility="gone">   
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/activity_search_clear"
	        android:drawableLeft="@drawable/ic_clear_search_history"
	        android:layout_centerInParent="true"/> 
	</RelativeLayout>
	<View 
	    android:id="@+id/line2"
	    style="@style/SearchLine"/>	    

    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:visibility="visible">
	    <ImageView
	        android:id="@+id/logo"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="35dp"
	        android:layout_gravity="center"
	        android:background="@drawable/joy_icon" />
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="20dp"
            android:layout_gravity="center"
            android:text="@string/search_info"/>
        
    </LinearLayout>      
</LinearLayout>